--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   <title>Title</title>
 </head>
 <body>
-  Hello World
+  <header class="header">
+    <h1>Twitter</h1>
+    <nav>
+      <button>登录</button>
+      <button>注册</button>
+    </nav>
+  </header>
+  <main></main>
   <script src="src/app.js"></script>
 </body>
 </html>
