--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
 </head>
 <body>
   <header class="header">
-    <h1>Twitter</h1>
+    <h1 class="logo">Twitter</h1>
     <nav>
-      <button>登录</button>
-      <button>注册</button>
+      <button class="login">登录</button>
+      <button class="register">注册</button>
     </nav>
   </header>
-  <main></main>
+  <main>
+    <h1 class="title">查看世界上正在发生的事情</h1>
+    <input type="text" class="username" placeholder="电话、邮件地址或用户名">
+    <input type="text" class="password" placeholder="密码">
+    <p class="password_text">忘记密码？</p>
+    <button class="main_login">登录</button>
+    <p>或</p>
+    <button class="main_register">注册</button>
+  </main>
   <script src="src/app.js"></script>
 </body>
 </html>
