--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
   </header>
   <main>
     <h1 class="title">查看世界上正在发生的事情</h1>
-    <input type="text" class="username" placeholder="电话、邮件地址或用户名">
-    <input type="text" class="password" placeholder="密码">
-    <p class="password_text">忘记密码？</p>
-    <button class="main_login">登录</button>
-    <p>或</p>
-    <button class="main_register">注册</button>
+    <ul>
+      <li><input type="text" class="username" placeholder="电话、邮件地址或用户名"></li>
+      <li><input type="text" class="password" placeholder="密码"></li>
+      <li><p class="password_text">忘记密码？</p></li>
+      <li><button class="main_login">登录</button></li>
+      <li><p>或</p></li>
+      <li><button class="main_register">注册</button></li>
+    </ul>
   </main>
   <script src="src/app.js"></script>
 </body>
